# medyan

./: .cproject  .gitignore  .project  0001-debugged.patch  0002-Restart-procedures-edited-to-accommodate-polymerizat.patch  BoundaryFF.cpp  BoundaryFF.h  CHANGELOG.md  CMakeLists.txt  Dockerfile  ForceField.h  MBeadDB.h  MComponent.h  MComposite.cpp  MComposite.h  MCylinder.cpp  MCylinderDB.cpp  MCylinderDB.h  MExclVol.cpp  MExclVol.h  MFilamentBendingHarmonic.cpp  MFilamentBendingHarmonic.h  MFilamentDB.cpp  MFilamentFF.h  MFilamentStretching.h  MFilamentStretchingHarmonic.cpp  MFilamentTwisting.cpp  MLinker.h  MLinkerStretching.h  MLinkerStretchingHarmonic.cpp  MMotorGhost.h  MMotorGhostDB.h  MMotorGhostFF.h  MMotorGhostInteractions.h  MMotorGhostStretching.cpp  MMotorGhostStretchingHarmonic.h  MNetwork.h  README.md  Reactable.h  SubSystem.h  (+15 more)
src/: -ffast-math  .cproject  BubbleInitializer.cpp  BubbleInitializer.h  CController.cpp  CController.h  CMakeLists.txt  Component.cpp  Component.h  Composite.cpp  Composite.h  Controller.cpp  Controller.cpp.MTOC  Controller.cpp.orig  Controller.cpp.revised  Controller.cpp~  Controller.cu  Controller.h  Controller.h.orig  ControllerCUDA.h  DRController.cpp  DRController.h  FilamentInitializer.cpp  FilamentInitializer.h  GController.cpp  GController.h  Histogram.h  MController.cpp  MController.h  MEDYAN  MEDYAN.cpp  Makefile  Makefile.Millad  Makefile.dep  Makefile_V2  MathFunctions.cpp  MathFunctions.cu  MathFunctions.h  Medyan3_2.cbp  MedyanArgs.hpp  (+33 more)
src/Analysis/Io/: ReadSnapshot.cpp  ReadSnapshot.hpp  read_snapshot.h
src/Analysis/data/: snapshot.h
src/Analysis/io/: read_snapshot.cpp  read_snapshot.h  read_snapshot.hpp
src/CaMKII/: CaMKIIMathFunctions.cpp  CaMKIIMathFunctions.h
src/Chemistry/: BindingManager.cpp  BindingManager.cu  BindingManager.h  BindingManagerCUDA.h  ChemCallbacks.h  ChemCallbacks.h~  ChemGillespieImpl.cpp  ChemGillespieImpl.h  ChemManager.cpp  ChemManager.cu  ChemManager.h  ChemNRMImpl.cpp  ChemNRMImpl.h  ChemRNode.h  ChemSim.cpp  ChemSim.h  ChemSimImpl.h  ChemSimpleGillespieImpl.cpp  ChemSimpleGillespieImpl.h  DissipationTracker.h  HybridBindingSearchManager.cpp  HybridBindingSearchManager.h  RSpecies.cpp  RSpecies.h  Reaction.cpp  Reaction.h  ReactionBase.cpp  ReactionBase.h  ReactionContainer.h  ReactionDy.hpp  ReactionTemplate.cpp  ReactionTemplate.h  Species.cpp  Species.h  SpeciesContainer.h
src/Chemistry/CaMKII/: CaMKIIBindingManager.cpp  CaMKIIBindingManager.h  CaMKIIChemCallbacks.h  CaMKIIChemManager.cpp  CaMKIIChemManager.h  CaMKIISpecies.h
src/Core/: Globals.hpp
src/Mechanics/: CUDAcommon.cpp  CUDAcommon.h
src/Mechanics/ForceField/: BoundaryCylinderRepulsionExpcrosscheck.cpp  BubbleCylinderAttachmentHarmonic.cpp  BubbleCylinderAttachmentHarmonic.h  ForceField.h  ForceFieldManager (Carlos’s iMac's conflicted copy 2019-08-13).cpp  ForceFieldManager (Carlos’s iMac's conflicted copy 2019-08-13).h  ForceFieldManager.cpp  ForceFieldManager.cu  ForceFieldManager.h  ForceFieldManagerCUDA.h  LinkerStretchingHarmoniccrosscheck.cpp  MotorGhostStretchingHarmoniccrosscheck.cpp  Types.hpp  cross_check.cpp  cross_check.h
src/Mechanics/Minimizer/: CGDataCopy.hpp  CGFletcherRievesMethod.cpp  CGFletcherRievesMethod.h  CGMethod.cpp  CGMethod.cu  CGMethod.h  CGMethodCUDA.h  CGMethodDataCopy.hpp  CGPolakRibiereMethod.cpp  CGPolakRibiereMethod.cu  CGPolakRibiereMethod.h  CGSteepestDescent.cpp  CGSteepestDescent.h  ConjugateGradient.h  MinimizationTypes.hpp  Minimizer.h
src/Side/: SideProcedures.hpp  SurfaceMeshDiffusion.hpp
src/Special/: MTOC.h
src/Structure/: Bead.cpp  Bead.h  Bin.cpp  Bin.h  BinGrid.h  Boundary.cpp  Boundary.h  BoundaryElement.cpp  BoundaryElement.h  BoundaryElementImpl.cpp  BoundaryElementImpl.h  BoundaryImpl.cpp  BoundaryImpl.h  BoundarySurface.h  BoundarySurfaceImpl.cpp  BoundarySurfaceImpl.h  BranchingPoint.cpp  BranchingPoint.h  Bubble.cpp  Bubble.h  CBound.h  CBranchingPoint.cpp  CBranchingPoint.h  CCaMKIIingPoint.cpp  CCaMKIIingPoint.h  CCamkii.cpp  CCylinder.cpp  CCylinder.h  CLinker.cpp  CLinker.cpp~  CLinker.h  CMonomer.cpp  CMonomer.h  CMotorGhost.cpp  CMotorGhost.h  CaMKIICylinder.cpp  CaMKIICylinder.h  CaMKIIingPoint.cpp  CaMKIIingPoint.h  Camkii.cpp  (+56 more)
src/Structure/CaMKII/: CCaMKIIingPoint.cpp  CCaMKIIingPoint.h  CaMKIICylinder.cpp  (+5 more)
src/TESTS/: Makefile  TestRand.cpp  test_all.cpp  test_boundaries.cpp  test_compartments.cpp  test_composite.cpp  test_cube_slicing.cpp  test_ff_membrane.cpp  test_ff_triangle_cylinder_volume.cpp  test_ff_volume_conservation.cpp  test_geometry.cpp  test_geometry_membrane.cpp  test_gillespie.cpp  test_gillespie_cross.cpp  test_nrm.cpp  test_public.h  test_reactions.cpp  test_simple_gillespie.cpp  test_species.cpp
src/Util/: DoubleLinkedList.cpp  DoubleLinkedList.h  Environment.cpp  Environment.h  Environment.hpp  Profiler.cpp  Profiler.hpp  SExpr.hpp  ThreadPool.hpp  ThreadUtil.hpp
src/Visual/: Camera.hpp  Common.hpp  Control.hpp  DisplaySettings.hpp  DisplayStates.hpp  FrameData.hpp  Gui.hpp  Helper.cpp  Helper.hpp  MeshData.hpp  Playback.hpp  Profile.hpp  RenderManager.hpp  Shader.hpp  ShaderSrc.hpp  SharedData.cpp  SharedData.hpp  VisualElement.hpp  Window.hpp  render_manager.hpp
src/core/: command_line.cpp  command_line.h  command_line_opt.cpp  command_line_opt.h  command_line_parser.cpp  command_line_parser.h  globals.cpp  globals.h  log.cpp  log.h
src/dist_moduleV2/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comp_dist  dist_avx.h  dist_avx_aux.h  dist_avx_par.cpp  dist_avx_par.h  dist_bench.cpp  dist_common.h  dist_coords.h  dist_cuda.cu  dist_cuda.cuh  dist_cuda.h  dist_cuda_common.cuh  dist_cuda_simple.cuh  dist_driver.h  dist_example.cpp  dist_main.cpp  dist_mod_vars.cpp  dist_out.h  dist_serial.h  dist_simd.h  dist_simd_utils.h  dist_test.cpp  simd_dist_module  simd_dist_module.cbp  simd_dist_moduleV2.cbp
src/util/: environment.h  platform.h  profiler.cpp  profiler.h  restart_data.h  restart_io.cpp  restart_io.h  types.h
src/visual/: common.hpp  window.hpp
(+7485 files in other folders)
